syntax = "proto3";
option go_package = "github.com/skyline93/syncbyte-go/internal/proto";

package proto;

service ApiService {
    rpc CreateBackupPolicy(CreateBackupPolicyRequest) returns (CreateBackupPolicyResponse){}
    rpc StartBackup(StartBackupRequest) returns (StartBackupResponse){}
}

message CreateBackupPolicyRequest {
    string ResourceType = 1;
    string ResourceName = 2;
    int32 Retention = 3;

    string BackupPath = 4;
}

message CreateBackupPolicyResponse {
    int32 BackupPolicyID = 1;
}

message StartBackupRequest {
    int32 ResourceID = 1;
}

message StartBackupResponse {
    int32 JobID = 1;
}
